# TRUSTINT

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  ADDENDUM.md  BRONZE_GATE_OVERVIEW.md  LICENSE  LICENSE-DOCS  Makefile  README.md  SILVER_GO_AHEAD_PLAN.md  TRUSTINT_Full_Architecture_Overview.md  mypy.ini  pyproject.toml  requirements.txt  schema.sql
.github/workflows/: ci.yml
config/: assets.yaml  intake.yaml  laws.yaml  roles.yaml  trusts.yaml
core/: lattice.py  matrices.py  paths.py  substrate.py
docs/: OPERATIONS.md  README.md  USER_GUIDE_2025-10-06T07-18-23Z.md
docs/CHECKS/: doctor.md
docs/adr/: ADR-0001 Bronze Gate.md  ADR-0002 Inbox Model.md  ADR-0003 DB Contracts.md  ADR-0004 Logging & Audit.md  ADR-0005 Provenance Head.md  README.md
docs/architecture/: overview.md
docs/checks/: doctor.md
docs/cli/: commands.md
docs/db/: contracts.md  migrations.md
docs/ops/: inbox_quarantine.md
docs/policy/: SECURITY.md
docs/progress/: PROGRESS.jsonl  PROGRESS.md
docs/reports/: BRONZE_360.md  DEEP_DIVE_DAEMON_OVERVIEW_2025-10-08.md  SILVER_360.md  SYSTEM_ANALYSIS_REPORT.json  (+2 more)
migrations/: README.md  V002__add_rbac_tables.sql  V003__add_inbox_and_quarantine.sql  V004__add_schema_version.sql
scripts/: local_verify.py  migrate.py  prov_tools.py  trustint.py
tests/: conftest.py  test_db_contracts.py  test_idempotent.py  test_lattice.py  test_provenance.py  test_provenance_key_formats.py  test_rules.py
trustint.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
utils/: logger.py  provenance.py
(+30 files in other folders)
