[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trustint"
version = "0.1.0"
authors = [
  { name="Kerehama Mcleod", email="kerehama@mythik.co" },
]
description = "TRUSTINT - Trust Intelligence Daemon"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]

[project.scripts]
trustint = "scripts.trustint:cli"

[tool.setuptools.packages.find]
include = ["core*", "utils*", "scripts*"]
